<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/fridgex">


    <Button
        android:id="@+id/button2"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:background="@android:color/holo_blue_light"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="onvegan"
        android:text="@string/Вегетарианец"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />


    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:background="@color/colorAccent"
        android:backgroundTint="@color/colorAccent"
        android:onClick="onmiasoed"
        android:text="@string/Мясоед"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />


    <Button
        android:id="@+id/transfer"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="50dp"
        android:background="@android:color/holo_green_light"
        android:backgroundTint="@android:color/holo_green_light"
        android:onClick="onPostnayaeda"
        android:text="@string/Постящийся"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />



</android.support.constraint.ConstraintLayout>