<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="#FFFF00"
    tools:context="com.example.kirillrychkov.fridge1.MainActivity">

    <TextView
        android:id="@+id/WelcomeToFridge"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Welcome to fridge!"
        android:textColor="#000000"
        android:textSize="35dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/Products"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="@color/material_drawer_selected_text"
        android:backgroundTint="@color/material_drawer_primary"
        android:onClick="onProducts"
        android:text="@string/Продукты"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />


    <Button
        android:id="@+id/UserSetting"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="@android:color/holo_green_light"
        android:backgroundTint="@android:color/holo_green_light"
        android:onClick="onUserSetting"
        android:text="@string/Пользователь"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <Button
        android:id="@+id/Setting"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="#ff4081"
        android:backgroundTint="@color/material_drawer_accent"
        android:onClick="onSetting"
        android:text="@string/Настройки"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/ele"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="@color/material_drawer_primary"
        android:backgroundTint="@color/material_drawer_primary"
        android:onClick="onTest"
        android:text="@string/Тест"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

</android.support.constraint.ConstraintLayout>
